--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.0"
+    "mongoose": "^6.3.0",
+    "nodemailer": "^6.7.3"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
